--- a/offcanvas.css
+++ b/offcanvas.css
@@ -34,6 +34,10 @@ h2 {
     align: center;
 }
 
+h3 {
+  text-align: center;
+}
+
 .jumbotron{
     text-align: center;
 }
@@ -106,4 +110,8 @@ h2 {
 
 .vspace-top {
     margin-top: 30px;
+}
+
+.vspace-bottom {
+  margin-bottom: 30px;
 }
